[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
sha2 = "0.10.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
rand = "0.8.5"
rsa = "0.7.2"
base64 = "0.22.1"
log = "0.4.22"
env_logger = "0.11.5"
